# scrapy-study

./: .gitignore  courses_and_links.txt  pyproject.toml
bookscraper/bookscraper/spiders/: bookspider.py
codes/: code_01.py
tutorial/tutorial/spiders/: quotes_spider.py
