[tool.poetry]
name = "scrapy-study"
version = "0.1.0"
description = ""
authors = ["Leonardo <leo.daee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scrapy = "^2.11.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
